@@ -11,14 +11,16 @@ namespace Gcc
         {
             base.InitializeDefaults(node);
 
-            CCompiler compilerInstance = C.CompilerFactory.GetTargetInstance(node.Target, C.ClassNames.CCompilerTool) as CCompiler;
+            Opus.Core.Target target = node.Target;
 
-            string cppIncludePath = System.String.Format("{0}/c++/4.0.0", compilerInstance.IncludeDirectoryPaths(node.Target)[0]);
+            CCompiler compilerInstance = C.CompilerFactory.GetTargetInstance(target, C.ClassNames.CCompilerTool) as CCompiler;
+
+            string cppIncludePath = System.String.Format("{0}/c++/4.0.0", compilerInstance.IncludeDirectoryPaths(target)[0]);
             if (!System.IO.Directory.Exists(cppIncludePath))
             {
                 throw new Opus.Core.Exception(System.String.Format("Gcc C++ include path '{0}' does not exist", cppIncludePath), false);
             }
-            string cppIncludePath2 = System.String.Format("{0}/{1}", cppIncludePath, compilerInstance.PlatformSubPath);
+            string cppIncludePath2 = System.String.Format("{0}/{1}", cppIncludePath, compilerInstance.MachineType(target));
             if (!System.IO.Directory.Exists(cppIncludePath2))
             {
                 throw new Opus.Core.Exception(System.String.Format("Gcc C++ include path '{0}' does not exist", cppIncludePath2), false);
